created form so that people can submit their own projects

--- a/_posts/2014-02-19-3d-printing.md
+++ b/_posts/2014-02-19-3d-printing.md
@@ -2,7 +2,7 @@
 layout: post
 title: "3D printers"
 author: amchagas
-categories: [Hardware, General information]
+categories: [Hardware, database, learning, other_projects, software]
 ---
 
 The idea behind [3D printing](http://en.wikipedia.org/wiki/3D_printing) is simple: A machine that is able to move in 3 directions, deposits a certain material on a platform according to a model generated with a computer, so that in the end, from raw materials, one gets a fully formed object, that previously only existed on the computer screen.
